--- a/mdx/nextjs_thinking_zenn/page.mdx
+++ b/mdx/nextjs_thinking_zenn/page.mdx
@@ -4,9 +4,7 @@ date: '2025-02-16'
 link: https://zenn.dev/akfm/books/nextjs-basic-principle
 ---
 
-## 第一部
-
-- 
+※スクラップ記事です
 
 ## 第三部
 
@@ -19,10 +17,6 @@ link: https://zenn.dev/akfm/books/nextjs-basic-principle
 - 意図的に revalidate することも可能で、`revalidatePath()`や`revalidateTag()`を ServeActions や RouteHandler で呼び出すことで、キャッシュを再構築できる
   - また、`revalidatePath()`は、指定したパスのキャッシュを再構築するが、`revalidateTag()`は、指定したタグのキャッシュを再構築する
 
-#### Router Cache
-
--
-
 #### serverActions
 
 - サーバーサイドで`redirect()`を呼び出すことで、HTTP リダイレクトをせずに画面遷移ができる
@@ -33,17 +27,10 @@ link: https://zenn.dev/akfm/books/nextjs-basic-principle
 
 ## 第 4 部
 
-#### Streaming SSR
-
--
-
 #### Partial Pre Rendering(PPR)
 
 - 基本は Static Rendering。Suspense 内を Dynamic Rendering とする。
   - これにより Route 単位でレンダリングをまとめる必要がなくなる
--
-
-#### (おまけ)Suspense の使い分け
 
 ## 第 5 部 その他のプラクティス
 
